2000-09-06  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/Makefile (tests): Add tst-bsearch.
	* stdlib/tst-bsearch.c: New file.

	* posix/getopt.c (_getopt_internal): Don't recognize an option
	name as ambiguous if it's a prefix for more than one name but the
	other struct option values are identical.

	* posix/tstgetopt.c: Add test for improved ambiguity recognition.
	Don't depend on visual inspection of the output file to recognize
	errors.
	* posix/Makefile (tstgetopt-ARGS): Add a few more parameters.

2000-09-06  Andreas Jaeger  <aj@suse.de>

	* sysdeps/alpha/soft-fp/Dist: New file.
	* sysdeps/i386/soft-fp/Dist: New file.
	* sysdeps/mips/mips64/soft-fp/Dist: New file.
	* sysdeps/mips/soft-fp/Dist: New file.
	* sysdeps/powerpc/soft-fp/Dist: New file.
	* sysdeps/sparc/sparc32/soft-fp/Dist: New file.
	* sysdeps/sparc/sparc64/soft-fp/Dist: New file.

	* sysdeps/sparc/sparc64/soft-fp/Makefile [$(subdir) = soft-fp]:
	Use sysdep_routines instead of routines to fix make dist failure.
	* sysdeps/sparc/sparc32/soft-fp/Makefile: Likewise (in commented
	out code).
	* sysdeps/powerpc/soft-fp/Makefile [$(subdir) = soft-fp]: Likewise.

	* sysdeps/mips/Makefile [$(subdir) = misc]:  Use
	sysdep_headers instead of headers for make dist.

	* sysdeps/unix/sysv/linux/mips/Makefile [$(subdir) = misc]:
	Likewise.

2000-09-06  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/m68k/bits/fcntl.h: New file.

2000-09-06  Andreas Jaeger  <aj@suse.de>

	* soft-fp/Makefile (distribute): Remove ChangeLog.

	* sysdeps/sparc/sparc32/Makefile [$(subdir) = gnulib]:  Use
	sysdep_routines instead of routines for make dist.

2000-09-05  Ulrich Drepper  <drepper@redhat.com>

	* libio/libio.h (_IO_fwide_maybe_incompatible): For glibc 2.0
	compatibility check for old stream and call _IO_wide in doubt.
	(_IO_fwide): Use _IO_fwide_maybe_incompatible macro.
	* libio/iofwide.c (_IO_fwide): If compatibility with glibc 2.0 is
	needed tst for such an old structure and don't do anything.